# salty-coffee

./: .gitignore  CMakeLists.txt  README.md
CIA/: Ask.cpp  Ask.h  Cafe.cpp  Cafe.h  Character.cpp  Character.h  FlashBack.cpp  FlashBack.h  IA.cpp  IA.h  Intro.cpp  Intro.h  Letter1.cpp  Letter1.h  Letter2.cpp  Letter2.h  Message.cpp  Message.h  Naration.cpp  Naration.h  Scene.cpp  Scene.h  Script.txt  StatusBar.cpp  StatusBar.h  Taste.cpp  Taste.h  TheEnd.cpp  TheEnd.h  Transition.cpp  Transition.h  main.cpp
Gbase/: AudioEngine.cpp  AudioEngine.h  Color.cpp  Color.h  DrawableGameComponent.cpp  DrawableGameComponent.h  Events.cpp  Events.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameBase.h  GameBaseException.cpp  GameBaseException.h  GameComponent.cpp  GameComponent.h  GameScreen.cpp  GameScreen.h  GraphicsDevice.cpp  GraphicsDevice.h  MathHelper.h  MenuItem.cpp  MenuItem.h  MenuScreen.cpp  MenuScreen.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  ScreenManager.cpp  ScreenManager.h  SpriteBatch.cpp  SpriteBatch.h  Surface.cpp  Surface.h  TestEvents.cpp  TestEvents.h  Timer.cpp  Timer.h  (+1 more)
